<resources>
    <string name="app_name">Fitness_Tracker</string>
    <string name="label_imc">I M C</string>
    <string name="imc_response">Seu IMC é : %1$.2f</string>
    <string name="tmb_response">Seu TMB é : %1$.2f</string>
    <string name="imc_desc">IMC é a sigla para Índice de Massa Corporal que serve para avaliar o peso
        do indivíduo em relação à sua altura e assim indicar se está dentro do peso ideal,
        acima ou abaixo do peso desejado.\n\nPreencha os campos de peso e altura para descobrir o seu IMC</string>
    <string name="weight">peso (kg)</string>
    <string name="height">altura (cm)</string>
    <string name="calcular">Calcular</string>
    <string name="fields_messages">Todos os campos devem ser maiores que zero</string>


    <string name="imc_severely_low_weight">Severamente abaixo do peso</string>
    <string name="imc_very_low_weight">Muito abaixo do peso</string>
    <string name="imc_low_weight">Abaixo do peso</string>
    <string name="normal">Normal</string>
    <string name="imc_high_weight">Acima do peso</string>
    <string name="imc_so_high_weight">Moderadamente obeso</string>
    <string name="imc_severely_high_weight">Severamente obeso</string>
    <string name="imc_extreme_weight">Extremamente obeso</string>
    <string name="imc_button">I M C</string>
    <string name="save">Salvar</string>
    <string name="saved">Registro salvo com sucesso!</string>

    <string name="list_response">Resultado: %1$.2f</string>
    <string name="menu_buscar">Buscar</string>
    <string name="tmb_desc">TMB é calculo para descobrir a quantidade calórica que o corpo nescessita com base no seu estilo de vida</string>
    <string name="age">Idade</string>
    <string name="delete_message">Deseja apagar esse item?</string>


</resources>