<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ImcActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">

    <TextView
        style="@style/textViewForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imc_desc"
       />

    <EditText
        style="@style/editTextFrom"
        android:id="@+id/edtPeso"
        android:hint="@string/weight"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

       />

    <EditText
        style="@style/editTextFrom"
        android:id="@+id/edtAltura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/height"/>

    <Button
        style="@style/ButtonForm"
        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        />
    </LinearLayout>
</ScrollView>